[package]
name = "vows-api"
version = "0.1.0"
edition = "2021"
authors = [ "sclera <sclera@hana.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features = ["d1"] }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "js"] }
serde_json = "1.0.140"
